--- a/config.toml
+++ b/config.toml
@@ -10,6 +10,8 @@ theme = "Markut"
 dir = ":cacheDir/:project"
 maxAge = "1m"
 
+[permalinks]
+  blog = "/blog/:slug/"
 
 [params]
 description ="Markut, endüstriyel tasarım dergisidir. Endüstri tasarımı bağlamında genel tasarım disiplinleriyle de ilişkili olarak içerikler üreten online dergidir."
