--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,13 +19,13 @@ collections:
       - { label: 'Yayınlanma Tarihi', name: 'date', widget: 'datetime' }
       - { label: 'Yazar', name: 'yazar', widget: 'string' }
       - {label: "Thumbnail: 700x300px", name: "thumb", media_folder: "/static/img", widget: "image", required: false}
-      - {label: "Tags", name: "tags", widget: "list", default: ["news"]}
+      - {label: "Tags", name: "tags", widget: "list"}
       - { label: 'İçerik', name: 'body', widget: 'markdown' }
       - { label: 'Açıklama', name: 'aciklama', widget: 'text', required: false }
       - { label: 'Seo Başlığı', name: 'seotitle', widget: 'string', pattern: ['^.{20,55}$', "20 ile 55 karakter arasında olmalı"], required: false }
       - { label: 'Seo Açıklaması', name: 'description', widget: 'text', pattern: ['^.{120,155}$', "120 ile 155 karakter arasında olmalı"], required: false }
-      - { label: 'Sayı Numarası', name: 'sayi', widget: 'number', required: false, hint: "Örn.: 1"}
-      - { label: 'Sayfa Numarası', name: 'sayfa', widget: 'number', required: false, hint: "Örn.: 01 Başına sıfır ekliyoruz." }
+      - { label: 'Sayı Numarası', name: 'sayi', widget: "list", required: false, hint: "Örn.: 1"}
+      - { label: 'Sayfa Numarası', name: 'sayfa', widget: 'number', required: false, hint: "Örn.: 01 Başına sıfır ekliyoruz.", default: ["00"] }
       - { label: 'Sayfa/Kapak', name: 'type', widget: 'string', default: 'sayfa', hint: "Sayfa ve kapak şeklinde iki seçenek var. İçerikler için Sayfa kalmalı."}
   - name: 'blog'
     label: 'Blog'
@@ -40,7 +40,7 @@ collections:
       - { label: 'Yazar', name: 'yazar', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - {label: "Thumbnail: 700x300px", name: "thumb", media_folder: "/static/img", widget: "image", required: false}
-      - {label: "Tags", name: "tags", widget: "list", default: ["news"]}
+      - {label: "Tags", name: "tags", widget: "list"}
       - { label: 'Body', name: 'body', widget: 'markdown' }
       - { label: 'Seo Başlığı', name: 'seotitle', widget: 'string', required: false }
       - { label: 'Seo Açıklaması', name: 'description', widget: 'text', required: false }
