--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,10 +17,10 @@ collections:
       - { label: 'Başlık', name: 'title', widget: 'string' }
       - { label: 'Url', name: 'url', widget: 'string',   hint: "Link yapısı sayi-no/yazi-basligi şeklindedir. Örn.: sayi-1/bu-bir-denemedir" }
       - { label: 'Yayınlanma Tarihi', name: 'date', widget: 'datetime' }
-      - { label: 'Yazar', name: 'yazar', widget: 'string' }
+      - { label: 'Yazar', name: 'yazar', widget: "list" }
       - {label: "Thumbnail: 700x300px", name: "thumb", media_folder: "/static/img", widget: "image", required: false}
-      - {label: "Tags", name: "tags", widget: "list"}
       - { label: 'İçerik', name: 'body', widget: 'markdown' }
+      - {label: "Tags", name: "tags", widget: "list"}
       - { label: 'Açıklama', name: 'aciklama', widget: 'text', required: false }
       - { label: 'Seo Başlığı', name: 'seotitle', widget: 'string', pattern: ['^.{20,55}$', "20 ile 55 karakter arasında olmalı"], required: false }
       - { label: 'Seo Açıklaması', name: 'description', widget: 'text', pattern: ['^.{120,155}$', "120 ile 155 karakter arasında olmalı"], required: false }
@@ -37,7 +37,7 @@ collections:
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Slug', name: 'slug', widget: 'string', pattern: ['^[a-z0-9]+(?:-[a-z0-9]+)*$','A slug can have no spaces or special characters']}
-      - { label: 'Yazar', name: 'yazar', widget: 'string' }
+      - { label: 'Yazar', name: 'yazar', widget: "list" }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - {label: "Thumbnail: 700x300px", name: "thumb", media_folder: "/static/img", widget: "image", required: false}
       - {label: "Tags", name: "tags", widget: "list"}
