--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,7 +19,7 @@ collections:
       - { label: 'Url', name: 'url', widget: 'string',   hint: "Link yapısı sayi-no/yazi-basligi şeklindedir. Örn.: sayi-1/bu-bir-denemedir" }
       - { label: 'Yayınlanma Tarihi', name: 'date', widget: 'datetime' }
       - { label: 'Yazar', name: 'yazar', widget: "list" }
-      - {label: "Thumbnail: 700x300px", name: "thumb", media_folder: "/static/img", widget: "image", required: false}
+      - {label: "Thumbnail: 700x300px", name: "thumb", media_folder: "/static/img", public_folder: "/img", widget: "image", required: false}
       - { label: 'İçerik', name: 'body', widget: 'markdown' }
       - {label: "Tags", name: "tags", widget: "list"}
       - { label: 'Açıklama', name: 'aciklama', widget: 'text', required: false }
@@ -40,7 +40,7 @@ collections:
       - { label: 'Slug', name: 'slug', widget: 'string', pattern: ['^[a-z0-9]+(?:-[a-z0-9]+)*$','A slug can have no spaces or special characters']}
       - { label: 'Yazar', name: 'yazar', widget: "list" }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - {label: "Thumbnail: 700x300px", name: "thumb", media_folder: "/static/img", widget: "image", required: false}
+      - {label: "Thumbnail: 700x300px", name: "thumb", media_folder: "/static/img", public_folder: "/img", widget: "image", required: false}
       - {label: "Tags", name: "tags", widget: "list"}
       - { label: 'Body', name: 'body', widget: 'markdown' }
       - { label: 'Seo Başlığı', name: 'seotitle', widget: 'string', required: false }
