--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,8 @@ languageCode = "tr-tr"
 title = "Markut"
 theme = "Markut"
 #10 şubat 2020
-
+timeout= 60000
+pygmentsUseClassic = false
 [caches]
 [caches.getjson]
 [caches.getCSV]
