tag, reklam görselleri...

--- a/config.toml
+++ b/config.toml
@@ -28,14 +28,14 @@ areklamurl = "/reklam-sponsorluk/"
 areklamtitle = "Dergimizin Bir Parçası Olun"
 areklamdesc = "Dergimize reklam vererek ürününüzü, içeriğinizi öne çıkarabilirsiniz. A reklam alanına şimdi reklam verebilirsiniz."
 
-breklamimg = "/img/markut-dergimizin-parcasi.jpg"
+breklamimg = "/img/markut-b-reklam-gorsel.jpg"
 breklamurl = "/reklam-sponsorluk/"
-breklamtitle = "Dergimizin Bir Parçası Olun"
+breklamtitle = "Dergimize Sponsor Olun"
 breklamdesc = "Dergimize reklam vererek ürününüzü, içeriğinizi öne çıkarabilirsiniz. B reklam alanına şimdi reklam verebilirsiniz."
 
-creklamimg = "/img/markut-dergimizin-parcasi.jpg"
+creklamimg = "/img/markut-c-reklam-gorsel.jpg"
 creklamurl = "/reklam-sponsorluk/"
-creklamtitle = "Dergimizin Bir Parçası Olun"
+creklamtitle = "Dergimize Reklam Verin"
 creklamdesc = "Dergimize reklam vererek ürününüzü, içeriğinizi öne çıkarabilirsiniz. C reklam alanına şimdi reklam verebilirsiniz."
 
 d1reklamimg = "/img/markut-dergimizin-parcasi.jpg"
