twitter hesabımız yayında c reklam, renk kodu

--- a/config.toml
+++ b/config.toml
@@ -33,10 +33,11 @@ breklamurl = "/reklam-sponsorluk/"
 breklamtitle = "Dergimize Sponsor Olun"
 breklamdesc = "Dergimize reklam vererek ürününüzü, içeriğinizi öne çıkarabilirsiniz. B reklam alanına şimdi reklam verebilirsiniz."
 
-creklamimg = "/img/markut-c-reklam-gorsel.jpg"
-creklamurl = "/reklam-sponsorluk/"
-creklamtitle = "Dergimize Reklam Verin"
-creklamdesc = "Dergimize reklam vererek ürününüzü, içeriğinizi öne çıkarabilirsiniz. C reklam alanına şimdi reklam verebilirsiniz."
+creklamimg = "/img/markut-twitter-hesabi-yayinda.png"
+creklamurl = "https://twitter.com/markutworks"
+creklamtitle = "Twitter Hesabımız Yayında!"
+creklamdesc = "Bir platform iki kuş. Twitter'da yerimizi aldık. Takip etmek ister misiniz? Bibirinden faydalı içerikleri kaçırmamak için Twitter adresimizi takip edebilirsiniz."
+creklamrenk = "#ff2f0021"
 
 d1reklamimg = "/img/markut-dergimizin-parcasi.jpg"
 d1reklamurl = "/reklam-sponsorluk/"
