ilaerg reklam çalışması

--- a/config.toml
+++ b/config.toml
@@ -28,10 +28,11 @@ areklamurl = "/reklam-sponsorluk/"
 areklamtitle = "Bu Alana Reklam Verin!"
 areklamdesc = "Dergimize reklam vermek ister misiniz? Aylık binlerce okuyucuya sahip olduğumuz dergide; ürününüzü, içeriğinizi, firmanızı, sitenizi, yarışmanızı tanıtabilirsiniz. Unutmayın ki, nitelikli yazılarımızdan oluşan dergi, nitelikli insanlar tarfından okunmaktadır. A reklam alanına en uygun fiyatla şimdi reklam verebilirsiniz."
 
-breklamimg = "/img/markut-b-reklam-gorsel.jpg"
-breklamurl = "/reklam-sponsorluk/"
-breklamtitle = "Bu Alana Reklam Verin!"
-breklamdesc = "Dergimize reklam vermek ister misiniz? Aylık binlerce okuyucuya sahip olduğumuz dergide; ürününüzü, içeriğinizi, firmanızı, sitenizi, yarışmanızı tanıtabilirsiniz. Unutmayın ki; nitelikli yazılarımızdan oluşan dergi, nitelikli insanlar tarfından okunmaktadır. B reklam alanına en uygun fiyatla şimdi reklam verebilirsiniz."
+breklamimg = "/img/ilaerg.jpg"
+breklamurl = "https://www.instagram.com/ilaerg/"
+breklamtitle = "Her Pazar Stüdyo İlaerg'te Seramik Workshopuna Davetlisiniz!"
+breklamdesc = "İlaerg, İstanbul'da endüstriyel üretim prensiplerini geleneksel yöntemlerle birleştiren zamansız ve alışılmadık formlar üretmeyi hedefleyen bir seramik stüdyosudur. Bu amaçla çıktığı yolda İlaerg, kapılarını seramikle tanışmak isteyen herkese açıyor. <br><br> Başvuru ve detaylı bilgi için; Instagram: @ilaerg | 0216 463 00 02"
+breklamrenk = "#b5aec54a"
 
 creklamimg = "/img/markut-twitter-hesabi-yayinda.png"
 creklamurl = "https://twitter.com/markutworks"
